# c-roguelike

./: CMakeLists.txt  run.sh
src/: defines.h  engine.c  engine.h  entity.c  entity.h  input_handlers.c  input_handlers.h  main.c
src/map/: game_map.c  map.h  proc_gen.c  rooms.c
